--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -1,8 +1,6 @@
 {
   "name": "contract",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
   "private": true,
   "devDependencies": {
     "@ethersproject/abi": "^5.7.0",
@@ -20,5 +18,8 @@
     "hardhat-gas-reporter": "^1.0.9",
     "solidity-coverage": "^0.8.2",
     "typechain": "^8.2.0"
-  }
+  },
+  "scripts": {
+       "test": "npx hardhat test"
+      }
 }
