complete lint, prettier and github flow

--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -17,9 +17,14 @@
     "hardhat": "^2.14.0",
     "hardhat-gas-reporter": "^1.0.9",
     "solidity-coverage": "^0.8.2",
+    "solhint": "3.3.7",
     "typechain": "^8.2.0"
   },
   "scripts": {
-       "test": "npx hardhat test"
-      }
+    "run:script": "npx hardhat run scripts/run.js",
+    "test": "npx hardhat test",
+    "deploy": "npx hardhat run scripts/deploy.js --network sepolia",
+    "solhint": "solhint --max-error 0 -c ./.solhint.json \"contracts/**/*.sol\"",
+    "start": "npx hardhat node"
+  }
 }
